gcc/testsuite/rust/rustc/ui/issues/issue-19521.rs
fn main() {
    "".homura()(); // { dg-error ".E0599." "" { target *-*-* } }
}

